objects/Esales_Quote_Header__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Will store the ID of the account against which Quote is Created.</description>
        <label>Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Esales Quote Header</relationshipLabel>
        <relationshipName>Esales_Quote_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the ID of the contact of the Quote</description>
        <label>Contact ID</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Esales Quote Header</relationshipLabel>
        <relationshipName>Esales_Quote_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Curr_code__c</fullName>
        <description>Gives the currency code on opportunity against which the quote is created. May not be same as the currency code of the quote</description>
        <formula>text(Opportunity_ID__r.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Curr code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eff_End_Dt__c</fullName>
        <description>Date on which the quote would expire</description>
        <label>Eff End Dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eff_Start_Dt__c</fullName>
        <description>Date on which the quote is created in the system</description>
        <label>Eff Start Dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Stores the boolean value to show if the quote is active.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsApproved__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Stores the approval status of the code. Currently defaulted to True</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the ID of the opportunity against which the quote is created</description>
        <label>Opportunity ID</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Esales Quote Header</relationshipLabel>
        <relationshipName>Esales_Quote_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_ID_Seq__c</fullName>
        <description>Unique ID of quote generated</description>
        <displayFormat>ES{000000}</displayFormat>
        <label>Quote ID Seq</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Quote_Type__c</fullName>
        <defaultValue>"Quotation"</defaultValue>
        <description>Type of Quote. Currently all values are defaulted to "Quoting"</description>
        <label>Quote Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Postn_Name__c</fullName>
        <description>The name of the position against which the quote is created</description>
        <label>Sales Rep Postn Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Account_ID__c</fullName>
        <description>Siebel ID of the account against which the quote was created in Siebel System</description>
        <label>Siebel Account ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Contact_ID__c</fullName>
        <description>Siebel ID of the Contact against which the quote was created in Siebel System</description>
        <label>Siebel Contact ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Created__c</fullName>
        <description>Quote Creation date in Siebel</description>
        <label>Siebel Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Siebel_Last_Upd__c</fullName>
        <description>Date on which the quote was updated in Siebel</description>
        <label>Siebel Last Upd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Siebel_Opportunity_ID__c</fullName>
        <description>Siebel ID of the Opportunity against which the quote was created in Siebel System</description>
        <label>Siebel Opportunity ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Quote_Id__c</fullName>
        <description>The Actual quote ID the users would see on the quotes. It will contain the siebel based quote ids for the migrated quotes and for the quotes created in SFDC, this will be same as the seq number generated in the Quote_id_seq Field</description>
        <label>Siebel Quote Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stat_CD__c</fullName>
        <defaultValue>"In Progress"</defaultValue>
        <label>Stat CD</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_ID__c</fullName>
        <description>Siebel/FDA System ID for the position of the quote</description>
        <label>Sales Rep Postn ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Theater__c</fullName>
        <description>This Field is not used</description>
        <label>Theater</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X_Product_Total__c</fullName>
        <description>Total Product amount on the quote line items</description>
        <label>X Product Total</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X_Quote_Total__c</fullName>
        <description>Total  amount (Product+Service)on the quote line items</description>
        <label>X Quote Total</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X_Service_Total__c</fullName>
        <description>Total Service amount on the quote line items</description>
        <label>X Service Total</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <description>This object will store the esales quoting header level information.</description>
    <label>Esales Quote Header</label>
    <nameField>
        <label>Esales Quote Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Esales Quote Header</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>